fix for portfolio container sizing issue, but adding overflow:auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,16 @@ body {
     background-image: url("../images/halftone.png");
  }
 
-/* About Me Container */
-
+/* Generic Container Styling */
 .contentContainer {
     border-style: solid;
     border-color: #dddddd;
     border-width: 2px;
     background-color: #ffffff;
     width: 960px;
-    clear: both;
     margin-left: 15%;
     margin-right: 15%;
     margin-top: 10px;
-}
-
-.contentContainer .portfolioContainer {
-
-    height: 400px;
 }
 
 .contentContainer a.header {
@@ -33,6 +26,7 @@ body {
     padding-left: 15px;
 }
 
+/* Styling for About Me page */
 .contentContainer .floatImage {
     float:left;
     padding-left: 15px;
@@ -47,11 +41,15 @@ body {
     padding-right: 15px;
 } 
 
+/* Styling for the Portfolio Page */
+.contentContainer .portfolioContainer {
+    clear: both;
+    overflow: auto;
+}
+
 .contentContainer .portfolioImage {
     float: left;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding: 10px;
     width: 150px;
     height: 150px;
 }
